fix attach warning